ARROW-7214: [Python] Fix pickling of DictionaryArray

https://issues.apache.org/jira/browse/ARROW-7214

Closes #5871 from jorisvandenbossche/ARROW-7214-pickle-dictionary and squashes the following commits:

e09cb0ee5 <Joris Van den Bossche> ARROW-7214:  Fix pickling of DictionaryArray

Authored-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>