cpp/src/arrow/array.h
@@ -131,6 +131,13 @@ struct ARROW_EXPORT ArrayData {
       const std::vector<std::shared_ptr<ArrayData>>& child_data,
       int64_t null_count = kUnknownNullCount, int64_t offset = 0);
 
+  static std::shared_ptr<ArrayData> Make(
+      const std::shared_ptr<DataType>& type, int64_t length,
+      const std::vector<std::shared_ptr<Buffer>>& buffers,
+      const std::vector<std::shared_ptr<ArrayData>>& child_data,
+      const std::shared_ptr<Array>& dictionary, int64_t null_count = kUnknownNullCount,
+      int64_t offset = 0);
+
   static std::shared_ptr<ArrayData> Make(const std::shared_ptr<DataType>& type,
                                          int64_t length,
                                          int64_t null_count = kUnknownNullCount,
